# a653rs-router

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  TODO.md  cargo-lock.nix  checks.nix  flake.nix  hypervisor_config.yaml  lithos-ops.nix  partitions.nix  rust-toolchain.nix  shell.nix  xng-devshell.nix  xng-images.nix  xng-ops.nix
.config/: nextest.toml
.github/workflows/: checks.yml  nix.yaml  nix.yml
a653rs-router/: Cargo.toml
a653rs-router-cfg/: Cargo.toml  default.nix
a653rs-router-cfg/src/: main.rs
a653rs-router-linux/: Cargo.toml
a653rs-router-linux/src/: lib.rs  macros.rs  main.rs  network.rs  trace.rs
a653rs-router-macros/: Cargo.toml
a653rs-router-macros/src/: attrs.rs  lib.rs
a653rs-router-macros/src/generate/: interface.rs  router.rs
a653rs-router-macros/src/parse/: args.rs  limits.rs  mod.rs
a653rs-router-macros/tests/: integration.rs
a653rs-router-partition-macros/: Cargo.toml
a653rs-router-partition-macros/src/: lib.rs
a653rs-router-tests/: Cargo.toml
a653rs-router-tests/src/: lib.rs
a653rs-router-tests/tests/: integration.rs  partition.rs  router_config.rs
a653rs-router-zynq7000/: Cargo.toml  flash  flash-cfg.tcl  zynq7000_init_te0706.tcl
a653rs-router-zynq7000/src/: lib.rs  macros.rs  network.rs  partition.rs
a653rs-router/src/: config.rs  error.rs  lib.rs  macros.rs  network.rs  partition.rs  ports.rs  process.rs  reconfigure.rs  router.rs  run.rs  scheduler.rs
apex-echo/: Cargo.toml
apex-echo/examples/: dummy.rs  xng.rs
apex-echo/src/: client.rs  lib.rs  queuing.rs  server.rs  server_queuing.rs
apex-throughput/: Cargo.toml
apex-throughput/src/: lib.rs
config/: Cargo.toml  echo_client.ltcf  echo_server.ltcf  hypervisor_config.yml  network_partition.ltcf  network_partition_config.yml
config/echo-alt-local-client-xng/xml/: module.xml  schedules.xml
config/echo-direct-xng/xml/: channels.xml  schedules.xml
config/echo_client/: echo_client.ltcf  network_partition.ltcf  network_partition.yml
config/echo_server/: echo_server.ltcf  network_partition.ltcf  network_partition.yml  network_partition_client.yml
config/linux/: hv-server.yml  np-client.yml  np-server.yml
config/local_echo/: echo_client.ltcf  network_partition.ltcf  network_partition.yml  network_partition_config.yml
config/shared/: config.ltcf  echo_client.xml  echo_server.xml  echoserver.ltcf
config/src/: config.rs  generate.rs
config/xml/: channels.xml  echo_client.xml  echo_server.xml  hypervisor.xml  module.xml  multipartition_health_monitor.xml  network_partition.xml  partition.xml  schedules.xml
config/xng-echo-server/: config.ltcf  echo.ltcf  router.ltcf
configurator/: Cargo.toml
configurator/src/: lib.rs
coraz7/: Cargo.toml
coraz7/src/: gpio.rs  lib.rs  log.rs
core/: Cargo.toml
core/src/: config.rs  echo.rs  error.rs  forward.rs  lib.rs  network.rs  partition.rs  ports.rs  prelude.rs  process.rs  pseudo.rs  routing.rs  scheduler.rs  shaper.rs  types.rs  virtual_link.rs
deployment/: zynq7000_init_te0706.tcl
dummy-hypervisor/: Cargo.toml
dummy-hypervisor/src/: lib.rs
echo/: Cargo.toml
echo-router/: Cargo.toml
echo-router/examples/: dummy.rs
echo-router/src/: lib.rs
echo/examples/sampling/: xng.rs
echo/src/: client.rs  lib.rs  queuing.rs  server.rs  server_queuing.rs
examples/configurator/: Cargo.toml
examples/configurator-linux/: Cargo.toml
examples/configurator-linux/src/: main.rs
examples/configurator-xng/: Cargo.toml
examples/configurator-xng/src/: lib.rs
examples/configurator/examples/: linux.rs  xng.rs
examples/configurator/src/: lib.rs
examples/echo/: Cargo.toml  build.rs  hypervisor_config.yaml
examples/echo-client-zynq7000/: Cargo.toml
examples/echo-client-zynq7000/src/: lib.rs
examples/echo-linux/: Cargo.toml  build.rs
examples/echo-server-zynq7000/: Cargo.toml
examples/echo-xng/: Cargo.toml
examples/io-throughput/: Cargo.toml
examples/network-partition-echo/: Cargo.toml  build.rs
examples/nixos-integration-test/: client.yml  server.yml
examples/np-zynq7000/: Cargo.toml  build.rs
examples/router/: Cargo.toml
examples/throughput-zynq7000/: Cargo.toml
examples/zynq7000/: Cargo.toml  build.rs
gen-config/: Cargo.toml
gen-config/src/: config.rs  generate.rs  lib.rs
linux/: Cargo.toml  build.rs  hypervisor_config.yaml
linux/config/: hv-client.yml  network_partition_config.yml
linux/src/: lib.rs  main.rs  network.rs  pseudo.rs  udp.rs
log/: Cargo.toml  README.md
log/src/: lib.rs
network-partition/: Cargo.toml
network-partition-config/: Cargo.toml
network-partition-config/src/: lib.rs
network-partition-linux/: Cargo.toml
network-partition-linux/src/: network.rs
network-partition-macros/: Cargo.toml
network-partition-macros/src/: lib.rs  types.rs
network-partition-macros/src/generate/: interface.rs  mod.rs  router.rs
network-partition-macros/src/parse/: interface.rs  limits.rs  router.rs
network-partition-macros/tests/: integration.rs
network-partition-uart/: Cargo.toml
network-partition-uart/src/: network.rs
network-partition/src/: config.rs  error.rs  forward.rs  lib.rs  network.rs  reconfigure.rs  router.rs  run.rs  scheduler.rs  types.rs  virtual_link.rs
patches/: lithos-xng-armv7a-vmsa-tz.lds.patch
router/: Cargo.toml
router-partition-macros/: Cargo.toml
router-partition-macros/src/: config.rs  lib.rs  router_partition.rs  utils.rs
router/examples/: echo-client-linux.rs  echo-client-xng.rs  echo-local-xng.rs  echo-server-linux.rs  echo-server-xng.rs
router/examples/echo/: linux.rs
router/examples/throughput/: dummy.rs  xng.rs
router/src/: lib.rs
small-trace/: Cargo.toml
small-trace-gpio/: Cargo.toml
small-trace-gpio/src/: gpio.rs
small-trace/src/: lib.rs
src/: lib.rs  main.rs
test/: client.yml  integration.nix  server.yml
throughput/: Cargo.toml
throughput/src/: lib.rs
trace/: Cargo.toml
trace/src/: lib.rs
wrapped-types/: Cargo.toml
wrapped-types/src/: lib.rs
xng/: Cargo.toml
xng-rs-log/src/: log.rs
xng/src/: gpio.rs  lib.rs  network.rs
(+124 files in other folders)
