[workspace]
resolver = "2"

members = [
  "a653rs-router",
  "a653rs-router-tests",
  "a653rs-router-macros",
  "a653rs-router-linux",
  "a653rs-router-partition-macros",
  "a653rs-router-zynq7000",
  "examples/configurator",
  "examples/configurator-linux",
  "examples/configurator-xng",
  "examples/echo",
  "examples/echo-linux",
  "examples/echo-xng/client-queuing",
  "examples/echo-xng/client-sampling",
  "examples/echo-xng/server-queuing",
  "examples/echo-xng/server-sampling",
  "examples/router",
  "small-trace",
  "small-trace-gpio",
  "wrapped-types",
]

default-members = [
  "a653rs-router",
  "a653rs-router-macros",
  "a653rs-router-linux",
  "a653rs-router-partition-macros",
  "a653rs-router-tests",
  "a653rs-router-zynq7000",
  "small-trace",
  "small-trace-gpio",
  "wrapped-types",
]

[patch.crates-io]
a653rs = { git = "https://github.com/DLR-FT/a653rs.git", branch = "main" }

[workspace.dependencies]
a653rs = { version = "0.3.2", default-features = false }
log = "0"
# For UDP socket support
a653rs-linux = { git = "https://github.com/dadada/apex-linux.git", branch = "udp-network-driver", default-features = false }
uart_xilinx = "0.2"
# These are not on crates.io
a653rs-postcard = { git = "https://github.com/DLR-FT/a653rs-postcard.git", branch = "main", default-features = false }
a653rs-xng = { git = "https://github.com/DLR-FT/a653rs-xng.git", branch = "main", default-features = false }
once_cell = { version = "1.17", default-features = false }
postcard = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
xng-rs-log = { git = "https://github.com/DLR-FT/xng-rs-log.git", branch = "main", default-features = false }

bytesize = "1.3"
darling = "0.20"
humantime = "2.1"
itertools = "0.11.0"
proc-macro2 = "1.0"
quote = "1.0"

[workspace.dependencies.syn]
version = "2.0"
features = ["full"]
