[workspace]
resolver = "2"

members = [
  "a653rs-router",
  "a653rs-router-cfg",
  "a653rs-router-tests",
  "a653rs-router-macros",
  "a653rs-router-linux",
  "a653rs-router-partition-macros",
  "a653rs-router-zynq7000",
  "examples/configurator-linux",
  "examples/configurator-xng",
  "examples/echo",
  "examples/echo-linux",
  "examples/echo-xng",
  "examples/router",
  "small-trace",
  "small-trace-gpio",
  "wrapped-types",
]

default-members = [
  "a653rs-router",
  "a653rs-router-cfg",
  "a653rs-router-macros",
  "a653rs-router-linux",
  "a653rs-router-partition-macros",
  "a653rs-router-tests",
  "a653rs-router-zynq7000",
  "small-trace",
  "small-trace-gpio",
  "wrapped-types",
]

[workspace.dependencies]
a653rs = { version = "0.3.3", default-features = false }
bytesize = "1.3"
corncobs = { version = "0.1" }
crc16 = { version = "0.4.0", default-features = false }
darling = "0.20"
heapless = { version = "0.7", default-features = false }
humantime = "2.1"
humantime-serde = "1"
itertools = "0.11.0"
log = "0"
once_cell = { version = "1.17", default-features = false }
postcard = { version = "1.0", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
serde_json = { version = "1.0", default-feaures = false }
serde = { version = "1.0", default-features = false }
signal-hook.version = "0.3"
syn = { version = "2.0", features = ["full"] }
uart_xilinx = "0.2"
volatile-register = "0.2"
# These are not on crates.io
a653rs-linux = { git = "https://github.com/DLR-FT/a653rs-linux.git", branch = "main", default-features = false }
a653rs-postcard = { git = "https://github.com/DLR-FT/a653rs-postcard.git", branch = "main", default-features = false }
a653rs-xng = { git = "https://github.com/DLR-FT/a653rs-xng.git", branch = "main", default-features = false }
xng-rs-log = { git = "https://github.com/DLR-FT/xng-rs-log.git", branch = "main", default-features = false }
