[workspace]
resolver = "2"

members = [
  "a653rs-router",
  "a653rs-router-cfg",
  "a653rs-router-tests",
  "a653rs-router-linux",
  "a653rs-router-zynq7000",
  "examples/echo",
  "examples/echo-linux",
  "examples/echo-xng",
  "small-trace",
  "small-trace-gpio",
]

default-members = [
  "a653rs-router",
  "a653rs-router-cfg",
  "a653rs-router-linux",
  "a653rs-router-tests",
  "a653rs-router-zynq7000",
  "small-trace",
  "small-trace-gpio",
]

[workspace.dependencies]
a653rs = { version = "0.6", default-features = false }
cobs = { version = "0.2.3", default-features = false }
crc16 = { version = "0.4.0", default-features = false }
heapless = { version = "0.8", default-features = false }
log = "0"
once_cell = { version = "1.19", default-features = false }
postcard = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
signal-hook.version = "0.3"
uart_xilinx = "0.2"
volatile-register = "0.2"
# These are not on crates.io
a653rs-linux = { version = "0.2", default-features = false }
a653rs-postcard = { version = "0.4", default-features = false }
a653rs-xng = { version = "0.1", default-features = false }
xng-rs-log = { git = "https://github.com/DLR-FT/xng-rs-log.git", branch = "main", default-features = false }

[profile.dev]
panic = "abort"     # Abort on panic

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
