[package]
name = "a653rs-router-cfg"
version = "0.1.0"
edition = "2021"
authors = [
  "Tim Schubert <dadada@dadada.li>",
]
description = "Converts the configuration format for a653rs-router from YAML to postcard"
license = "MIT OR Apache-2.0"
keywords = [
  "arinc",
  "avionics",
  "embedded",
  "no_std",
  "network"
]
categories = [
  "aerospace",
  "embedded",
  "no_std"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs-router = { path = "../a653rs-router", features = ["serde"] }
heapless.version = "0.7" # because the version used by postcard is 0.7
postcard = { workspace = true, features = ["heapless"] }
serde_yaml = { workspace = true }
