[package]
name = "a653rs-router-linux"
version = "0.1.0"
edition = "2021"
authors = [
  "Tim Schubert <dadada@dadada.li>",
]
description = "Instantiation of a653rs-router for a653rs-linux"
license = "MIT OR Apache-2.0"
keywords = [
  "arinc",
  "avionics",
  "embedded",
  "no_std",
  "network"
]
categories = [
  "aerospace",
  "embedded",
  "no_std"
]

[features]
default = ["partition"]
log = ["dep:log", "a653rs-router/log"]
trace = ["dep:small-trace", "a653rs-router/trace"]
partition = ["dep:a653rs", "dep:serde_yaml"]

[[bin]]
name = "partition"
path = "src/main.rs"
required-features = [ "partition" ]

[dependencies]
a653rs = { workspace = true, optional = true }
a653rs-linux = { workspace = true, features = ["socket"] }
a653rs-router = { path = "../a653rs-router", features = ["serde"] }
log = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
small-trace = { path = "../small-trace", optional = true }
