[package]
name = "a653rs-router-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
wrapped-types.path = "../wrapped-types"
syn.workspace = true

[dev-dependencies.a653rs-router]
path = "../a653rs-router"
features = [ "macros", "serde" ]

[dev-dependencies.a653rs]
workspace = true
features = [ "macros" ]

[dev-dependencies.a653rs-linux]
workspace = true

[dev-dependencies.a653rs-router-linux]
path = "../a653rs-router-linux"
