[package]
name = "a653rs-router-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs = { workspace = true, features = ["bindings"] }
a653rs-router = { path = "../a653rs-router", features = ["serde", "log"] }

[dev-dependencies]
serde_yaml = { workspace = true }
