[package]
name = "a653rs-router-zynq7000"
version = "0.1.0"
edition = "2021"
authors = [
  "Tim Schubert <dadada@dadada.li>",
]
description = "Instantiation of a653rs-router for a653rs-xng on Zynq7000"
license = "MIT OR Apache-2.0"
keywords = [
  "arinc",
  "avionics",
  "embedded",
  "no_std",
  "network"
]
categories = [
  "aerospace",
  "embedded",
  "no_std"
]

[features]
log = [
  "dep:xng-rs-log",
]
trace = [
  "dep:small-trace",
]
partition = [
  "a653rs-router/serde",
  "a653rs/bindings",
  "dep:a653rs",
  "dep:a653rs-xng",
  "dep:postcard",
  "dep:log",
]

[[example]]
name = "partition"
path = "src/partition.rs"
required-features = ["partition"]
crate-type = ["staticlib"]

[dependencies]
a653rs = { workspace = true, optional = true }
a653rs-router = { path = "../a653rs-router" }
a653rs-xng = { workspace = true, optional = true }
cobs.workspace = true
crc16.workspace = true
heapless.workspace = true
log = { workspace = true, optional = true }
once_cell.workspace = true
postcard = { workspace = true, features = ["heapless"], optional = true }
small-trace = { path = "../small-trace", optional = true }
uart_xilinx.workspace = true
xng-rs-log = { workspace = true, optional = true }

[target.'cfg(target_arch = "armv7a")'.dependencies.a653rs-xng]
workspace = true
optional = true
features = ["panic_handler"]
