[package]
name = "a653rs-router"
version = "0.1.0"
edition = "2021"

[features]
serde = [ "dep:postcard", "dep:serde", "heapless/serde", "bytesize?/serde" ]
macros = [ "dep:a653rs-router-macros", "serde" ]
partition = [ "macros", "dep:a653rs-router-partition-macros" ]
log = ["dep:log"]
trace = ["dep:small-trace"]

[dependencies]
a653rs-router-macros = { path = "../a653rs-router-macros", optional = true }
a653rs-router-partition-macros = { path = "../a653rs-router-partition-macros", optional = true }
a653rs = { workspace = true, features = ["bindings"] }
bytesize = { workspace = true, optional = true }
heapless.workspace = true
humantime-serde = { workspace = true, optional = true }
log = { workspace = true, optional = true }
postcard = { workspace = true, optional = true, features = ["heapless"] }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
small-trace = { path = "../small-trace", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
