[package]
name = "a653rs-router"
version = "0.1.0"
edition = "2021"
authors = [
  "Tim Schubert <dadada@dadada.li>",
]
license = "MIT OR Apache-2.0"
keywords = [
  "arinc",
  "avionics",
  "embedded",
  "no_std",
  "network"
]
description = "ARINC 653 message router based on a653rs"
categories = [
  "aerospace",
  "embedded",
  "no_std"
]

[features]
log = ["dep:log"]
serde = ["dep:serde", "heapless/serde"]
trace = ["dep:small-trace"]

[dependencies]
a653rs = { workspace = true, features = ["bindings"] }
heapless.workspace = true
log = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
small-trace = { path = "../small-trace", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
