[package]
name = "apex-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "echo-xng"
crate-type = [ "staticlib" ]
path = "examples/xng.rs"
required-features = [ "xng" ]

[[example]]
name = "echo-linux"
path = "examples/linux.rs"
required-features = [ "linux" ]

[[example]]
name = "echo-dummy"
path = "examples/dummy.rs"
required-features = [ "dummy" ]

[features]
client = []
server = []
dummy = [ "dep:dummy-hypervisor" ]
linux = [
  "dep:a653rs-linux",
]
xng = [
  "dep:a653rs-xng",
  "dep:small-trace-gpio",
  "dep:xng-rs-log",
]

[dependencies]
a653rs.workspace = true
a653rs-postcard.workspace = true
log = "0"
once_cell.workspace = true
small-trace = { path = "../small-trace" }

[dependencies.a653rs-linux]
workspace = true
optional = true

[dependencies.a653rs-xng]
workspace = true
optional = true
features = [ "panic_handler" ]

[dependencies.dummy-hypervisor]
path = "../dummy-hypervisor"
optional = true

[dependencies.serde]
features = ["derive"]
workspace = true

[dependencies.small-trace-gpio]
path = "../small-trace-gpio"
optional = true

[dependencies.xng-rs-log]
workspace = true
optional = true
