[package]
name = "configurator"
version = "0.1.0"
edition = "2021"
description = "This is an example of how to configure the network partition using a sampling port"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
# -- because the variant name is empty, see flake.nix
name = "configurator--linux"
path = "./examples/linux.rs"

[[example]]
# -- because the variant name is empty, see flake.nix
name = "configurator--xng"
crate-type = [ "staticlib" ]
path = "./examples/xng.rs"

[features]
linux = [ "dep:a653rs-linux" ]
xng = [ "dep:a653rs-xng", "dep:xng-rs-log" ]
client = [ ]
server = [ ]
local = [ ]
alt-local-client = []

[dependencies.a653rs]
workspace = true
features = [ "macros" ]

[dependencies.a653rs-router]
features = [ "serde" ]
path = "../a653rs-router"

[dependencies.a653rs-linux]
workspace = true
optional = true

[dependencies.a653rs-xng]
workspace = true
optional = true
features = [ "panic_handler" ]

[dependencies.xng-rs-log]
workspace = true
optional = true

[dependencies.a653rs-postcard]
workspace = true

[dependencies.log]
version = "0"
