[package]
name = "network-partition"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-rs = { git = "https://github.com/aeronautical-informatics/apex-rs.git", branch = "main"}
apex-rs-postcard = { git = "https://github.com/aeronautical-informatics/apex-rs-postcard.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.16"
bytesize = { version = "1.1", features = ["serde"] }
humantime-serde = "1.1"
heapless = { version = "0.7", features = ["serde"] }
