[package]
name = "network-partition"
version = "0.1.0"
edition = "2021"

[features]
std = [ "dep:bytesize", "dep:humantime-serde" ]
serde = [ "dep:serde", "heapless/serde", "bytesize?/serde" ]

[dependencies]
apex-rs = { git = "https://github.com/aeronautical-informatics/apex-rs.git", branch = "main"}
heapless = { version = "0.7" }
log = "0"
humantime-serde = { version = "1", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
bytesize = { version = "1.1.0", optional = true }
small-trace = { path = "../trace" }

[dev-dependencies]
# For tests
serde_yaml = "0.9"
