[package]
name = "echo-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "echo-router-xng"
crate-type = [ "staticlib" ]
path = "examples/xng.rs"
required-features = [ "xng" ]

[[example]]
name = "echo-router-linux"
path = "examples/linux.rs"
required-features = [ "linux" ]

[[example]]
name = "echo-router-dummy"
path = "examples/dummy.rs"
required-features = [ "dummy" ]

[features]
client = []
server = []
dummy = [ "dep:dummy-hypervisor" ]
linux = [
  "dep:a653rs-linux",
  "dep:network-partition-linux",
]
xng = [
  "dep:a653rs-xng",
  "dep:network-partition-uart",
  "dep:small-trace-gpio",
  "dep:xng-rs-log",
]

[dependencies]
small-trace.path = "../small-trace"
log.workspace = true

[dependencies.network-partition-uart]
path = "../network-partition-uart"
optional = true

[dependencies.network-partition-linux]
path = "../network-partition-linux"
optional = true

[dependencies.network-partition]
path = "../network-partition"
features = [ "macros" ]

[dependencies.a653rs]
workspace = true
features = [ "macros" ]

[dependencies.a653rs-linux]
workspace = true
optional = true

[dependencies.a653rs-xng]
workspace = true
optional = true
features = [ "panic_handler" ]

[dependencies.small-trace-gpio]
path = "../small-trace-gpio"
optional = true

[dependencies.xng-rs-log]
workspace = true
optional = true

[dependencies.dummy-hypervisor]
path = "../dummy-hypervisor"
optional = true
