[package]
name = "apex-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apex-rs = { git = "https://github.com/aeronautical-informatics/apex-rs.git", branch = "main" }
apex-rs-postcard = { git = "https://github.com/aeronautical-informatics/apex-rs-postcard.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
log = "0"
once_cell = "1.17"
