[package]
name = "network-partition-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
network-partition = { path = "../core" }
apex-rs = { git = "https://github.com/aeronautical-informatics/apex-rs.git", branch = "main" }
apex-rs-linux = { git = "https://github.com/dadada/apex-linux.git", branch = "stable-for-master-thesis" }
once_cell = "1.17"
log = "0"
heapless = "0.7"
bytesize = "1.1"

[build-dependencies]
network-partition-config = { path = "../config" }
serde_yaml = "0.9"
quote = "1"
proc-macro2 = "1"

