[package]
name = "network-partition-uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-partition = { path = "../network-partition" }
log = "0"
once_cell = { version = "1.17", default-features = false }
# Seems a bit newer than what is on crates.io
uart_xilinx = { git = "https://github.com/duskmoon314/uart-rs.git", branch = "main"}
heapless = { version = "0.7" }
corncobs = { version = "0.1" }
crc16 = { version = "0.4.0", default-features = false }
small-trace = { path = "../small-trace" }
