[package]
name = "network-partition"
version = "0.1.0"
edition = "2021"

[features]
std = [ "dep:bytesize", "dep:humantime-serde" ]
serde = [ "dep:postcard", "dep:serde", "heapless/serde", "bytesize?/serde" ]
macros = [ "dep:network-partition-macros", "serde" ]

[dependencies]
a653rs.workspace = true
heapless = { version = "0.7", default-features = false }
log = "0"
humantime-serde = { version = "1", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
bytesize = { version = "1.1.0", optional = true }
small-trace = { path = "../small-trace" }
postcard = { version = "1.0", optional = true, default-features = false, features = [ "heapless" ] }
network-partition-macros = { version = "0.1", path = "../network-partition-macros", optional = true }

[dev-dependencies.serde_yaml]
version = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
