[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "router-echo-xng"
crate-type = [ "staticlib" ]
path = "examples/echo/xng.rs"
required-features = [ "echo", "xng" ]

[[example]]
name = "router-echo-linux"
path = "examples/echo/linux.rs"
required-features = [ "echo", "linux" ]

[[example]]
name = "router-echo-dummy"
path = "examples/echo/dummy.rs"
required-features = [ "echo", "dummy" ]

[[example]]
name = "router-throughput-xng"
crate-type = [ "staticlib" ]
path = "examples/throughput/xng.rs"
required-features = [ "throughput", "xng" ]

[[example]]
name = "router-throughput-linux"
path = "examples/throughput/linux.rs"
required-features = [ "throughput", "linux" ]

[[example]]
name = "router-throughput-dummy"
path = "examples/throughput/dummy.rs"
required-features = ["throughput",  "dummy" ]

[features]
# System configuration
echo = []
throughput = []

# Component configuration
client = []
server = []

# Platform configuration
dummy = [ "dep:dummy-hypervisor" ]
linux = [
  "dep:a653rs-linux",
  "dep:network-partition-linux",
]
xng = [
  "dep:a653rs-xng",
  "dep:network-partition-uart",
  "dep:small-trace-gpio",
  "dep:xng-rs-log",
]

[dependencies]
small-trace.path = "../small-trace"
log.workspace = true

[dependencies.network-partition-uart]
path = "../network-partition-uart"
optional = true

[dependencies.network-partition-linux]
path = "../network-partition-linux"
optional = true

[dependencies.network-partition]
path = "../network-partition"
features = [ "macros" ]

[dependencies.a653rs]
workspace = true
features = [ "macros" ]

[dependencies.a653rs-linux]
workspace = true
optional = true

[dependencies.a653rs-xng]
workspace = true
optional = true
features = [ "panic_handler" ]

[dependencies.small-trace-gpio]
path = "../small-trace-gpio"
optional = true

[dependencies.xng-rs-log]
workspace = true
optional = true

[dependencies.dummy-hypervisor]
path = "../dummy-hypervisor"
optional = true
