[package]
name = "router"
version = "0.1.0"
edition = "2021"
description = "Example configurations for routing echo messages between a client and server. See also test/integration.nix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The XNG examples do not compile if you do not also specify which package it
# is located in with `-p router`, because features appear to be unified before
# building individual examples, so some dependencies are build using std and the
# build fails.

[[example]]
name = "router-echo-local-xng"
crate-type = [ "staticlib" ]
path = "examples/echo-local-xng.rs"
required-features = [ "xng" ]

[[example]]
name = "router-echo-client-xng"
crate-type = [ "staticlib" ]
path = "examples/echo-client-xng.rs"
required-features = [ "xng" ]

[[example]]
name = "router-echo-server-xng"
crate-type = [ "staticlib" ]
path = "examples/echo-server-xng.rs"
required-features = [ "xng" ]

[[example]]
name = "router-echo-client-linux"
path = "examples/echo-client-linux.rs"
required-features = [ "linux" ]

[[example]]
name = "router-echo-server-linux"
path = "examples/echo-server-linux.rs"
required-features = [ "linux" ]

[features]
# Platform configuration
linux = [
  "dep:a653rs-linux",
  "dep:network-partition-linux",
]
xng = [
  "dep:a653rs-xng",
  "dep:network-partition-uart",
  "dep:small-trace-gpio",
  "dep:xng-rs-log",
]

[dependencies]
small-trace.path = "../small-trace"
log.workspace = true

[dependencies.network-partition-uart]
path = "../network-partition-uart"
optional = true

[dependencies.network-partition-linux]
path = "../network-partition-linux"
optional = true

[dependencies.network-partition]
path = "../network-partition"
features = [ "macros" ]

[dependencies.a653rs]
workspace = true
features = [ "macros" ]

[dependencies.a653rs-linux]
workspace = true
optional = true

[dependencies.a653rs-xng]
workspace = true
optional = true
features = [ "panic_handler" ]

[dependencies.small-trace-gpio]
path = "../small-trace-gpio"
optional = true

[dependencies.xng-rs-log]
workspace = true
optional = true

[dependencies.router-partition-macros]
path = "../router-partition-macros"
