[package]
name = "small-trace-gpio"
description = "Tracer for writing traces to GPIOs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
volatile-register = "0.2"
small-trace = { path = "../small-trace" }
