[package]
name = "small-trace-gpio"
description = "Tracer for writing traces to GPIOs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register.workspace = true
small-trace = { path = "../small-trace" }
