[package]
name = "small-trace-gpio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation of small-trace using GPIOs on the CoraZ7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register.workspace = true
small-trace = { path = "../small-trace" }
