[package]
name = "network-partition-xng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-partition = { path = "../core" }
log = "0"
once_cell = { version = "1.17", default-features = false }
uart_xilinx = { version = "0.1.0" }
heapless = { version = "0.7" }
corncobs = { version = "0.1" }
crc16 = { version = "0.4.0", default-features = false }
volatile-register = "0.2"
one-byte-trace = { path = "../trace" }
