[package]
name = "configurator-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.a653rs]
workspace = true
features = [ "macros" ]

[dependencies.a653rs-router]
features = [ "serde" ]
path = "../../a653rs-router"

[dependencies.log]
version = "0"

[dependencies.a653rs-linux]
workspace = true

[dependencies.signal-hook]
version = "0.3.17"

[dependencies.postcard]
workspace = true

# For reading config file
[dependencies.serde_json]
version = "1.0"
