[package]
name = "configurator-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs = { workspace = true, features = [ "macros" ] }
a653rs-router = { features = [ "serde" ], path = "../../a653rs-router" }
log.workspace = true
a653rs-linux.workspace = true
signal-hook.workspace = true
postcard.workspace = true
serde_json.workspace = true
